// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.polling.contracts;

option java_multiple_files = true;

message PollingPayloadData {
  Type type = 1;
  string connectorRef = 2;
  oneof Payload {
    HttpHelmPayload httpHelmPayload = 3;
    EcrPayload ecrPayload = 4;
    GcsHelmPayload gcsHelmPayload = 5;
    S3HelmPayload s3HelmPayload = 6;
    DockerHubPayload dockerHubPayload = 7;
    GcrPayload gcrPayload = 8;
    NexusRegistryPayload nexusRegistryPayload = 9;
    ArtifactoryRegistryPayload artifactoryRegistryPayload = 10;
  }
}

enum Type {
  UNDEFINED = 0;
  HTTP_HELM = 1;
  ECR = 2;
  GCS_HELM = 3;
  S3_HELM = 4;
  DOCKER_HUB = 5;
  GCR = 6;
  NEXUS = 7;
  ARTIFACTORY = 8;
}

message HttpHelmPayload {
  string chartName = 1;
  HelmVersion helmVersion = 2;
}

message EcrPayload {
  string imagePath = 1;
  string region = 2;
}

message GcsHelmPayload {
  string chartName = 1;
  string bucketName = 2;
  HelmVersion helmVersion = 3;
  string folderPath = 5;
}

message S3HelmPayload {
  string chartName = 1;
  string bucketName = 2;
  string region = 3;
  HelmVersion helmVersion = 4;
  string folderPath = 5;
}

enum HelmVersion {
  V2 = 0;
  V3 = 1;
}

message DockerHubPayload {
  string imagePath = 1;
}

message GcrPayload {
  string imagePath = 1;
  string registryHostname = 2;
}

message NexusRegistryPayload {
  string repository = 1;
  string imagePath = 2;
  string format = 3;
}

message ArtifactoryRegistryPayload {
  string imagePath = 1;
}